; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/extr_iscsi_tcp.c_iscsi_sw_tcp_recv.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/extr_iscsi_tcp.c_iscsi_sw_tcp_recv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.iscsi_conn* }
%struct.iscsi_conn = type { i32 }
%struct.sk_buff = type { i64 }

@.str = private unnamed_addr constant [13 x i8] c"in %d bytes\0A\00", align 1
@ISCSI_TCP_SKB_DONE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [25 x i8] c"read %d bytes status %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*, %struct.sk_buff*, i32, i64)* @iscsi_sw_tcp_recv to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iscsi_sw_tcp_recv(%struct.TYPE_5__* %0, %struct.sk_buff* %1, i32 %2, i64 %3) #0 {
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca %struct.sk_buff*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca %struct.iscsi_conn*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %5, align 8
  store %struct.sk_buff* %1, %struct.sk_buff** %6, align 8
  store i32 %2, i32* %7, align 4
  store i64 %3, i64* %8, align 8
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %14 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load %struct.iscsi_conn*, %struct.iscsi_conn** %15, align 8
  store %struct.iscsi_conn* %16, %struct.iscsi_conn** %9, align 8
  store i32 0, i32* %11, align 4
  %17 = load %struct.iscsi_conn*, %struct.iscsi_conn** %9, align 8
  %18 = load %struct.sk_buff*, %struct.sk_buff** %6, align 8
  %19 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = load i32, i32* %7, align 4
  %22 = zext i32 %21 to i64
  %23 = sub nsw i64 %20, %22
  %24 = call i32 (%struct.iscsi_conn*, i8*, i64, ...) @ISCSI_SW_TCP_DBG(%struct.iscsi_conn* %17, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i64 %23)
  br label %25

25:                                               ; preds = %43, %4
  store i32 0, i32* %12, align 4
  %26 = load %struct.iscsi_conn*, %struct.iscsi_conn** %9, align 8
  %27 = load %struct.sk_buff*, %struct.sk_buff** %6, align 8
  %28 = load i32, i32* %7, align 4
  %29 = call i32 @iscsi_tcp_recv_skb(%struct.iscsi_conn* %26, %struct.sk_buff* %27, i32 %28, i32 0, i32* %12)
  store i32 %29, i32* %10, align 4
  %30 = load i32, i32* %10, align 4
  %31 = load i32, i32* %7, align 4
  %32 = add i32 %31, %30
  store i32 %32, i32* %7, align 4
  %33 = load i32, i32* %10, align 4
  %34 = load i32, i32* %11, align 4
  %35 = add i32 %34, %33
  store i32 %35, i32* %11, align 4
  br label %36

36:                                               ; preds = %25
  %37 = load i32, i32* %10, align 4
  %38 = icmp ne i32 %37, 0
  br i1 %38, label %39, label %43

39:                                               ; preds = %36
  %40 = load i32, i32* %12, align 4
  %41 = load i32, i32* @ISCSI_TCP_SKB_DONE, align 4
  %42 = icmp ne i32 %40, %41
  br label %43

43:                                               ; preds = %39, %36
  %44 = phi i1 [ false, %36 ], [ %42, %39 ]
  br i1 %44, label %25, label %45

45:                                               ; preds = %43
  %46 = load %struct.iscsi_conn*, %struct.iscsi_conn** %9, align 8
  %47 = load %struct.sk_buff*, %struct.sk_buff** %6, align 8
  %48 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %47, i32 0, i32 0
  %49 = load i64, i64* %48, align 8
  %50 = load i32, i32* %7, align 4
  %51 = zext i32 %50 to i64
  %52 = sub nsw i64 %49, %51
  %53 = load i32, i32* %12, align 4
  %54 = call i32 (%struct.iscsi_conn*, i8*, i64, ...) @ISCSI_SW_TCP_DBG(%struct.iscsi_conn* %46, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0), i64 %52, i32 %53)
  %55 = load i32, i32* %11, align 4
  ret i32 %55
}

declare dso_local i32 @ISCSI_SW_TCP_DBG(%struct.iscsi_conn*, i8*, i64, ...) #1

declare dso_local i32 @iscsi_tcp_recv_skb(%struct.iscsi_conn*, %struct.sk_buff*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
